--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <<title>Good day Microexcel Team</title>
-    <<head>
+    <title>Good day Microexcel Team</title>
+    <head>
         <h1> Azure website for demo </h1>
     </head>
+</html>
+
+   
